--- a/index.html
+++ b/index.html
@@ -4,6 +4,132 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Searing | App | JS</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="navbar obj-width">
+        <h2 class="nav-logo"><a href="index.html">News.</a></h2>
+
+        <div id="search-container">
+          <input
+            type="text"
+            placeholder="Search news here.."
+            id="search-input"
+          />
+          <button id="search-button">Search</button>
+        </div>
+      </div>
+    </nav>
+
+    <main id="blog-container" class="obj-width">
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+
+      <div id="blog-card">
+        <img src="https://placehold.co/600x400" alt="image" />
+        <h2>This is a title</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+          dignissimos et maxime sint quisquam, aperiam enim ea blanditiis
+          nesciunt rem ex, aspernatur ipsam placeat dolorum, nostrum sequi?
+          Delectus aliquid consequatur, enim incidunt deserunt architecto
+          pariatur reiciendis. Reprehenderit odit aperiam aliquam!
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
