--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main id="blog-container" class="obj-width">
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -35,7 +35,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -47,7 +47,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -59,7 +59,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -71,7 +71,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -83,7 +83,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -95,7 +95,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -107,7 +107,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -119,7 +119,7 @@
         </p>
       </div>
 
-      <div id="blog-card">
+      <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="image" />
         <h2>This is a title</h2>
         <p>
@@ -131,5 +131,7 @@
         </p>
       </div>
     </main>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
