I have aadded date in all news article or blog

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
       </div>
     </main>
 
-    <script src="JS-02/script-02.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
